feat: add base html structure

--- a/singolo1.html
+++ b/singolo1.html
@@ -6,5 +6,94 @@
 		<link rel="stylesheet" href="singolo1.css" />
 		<title>Singolo</title>
 	</head>
-	<body></body>
+	<body>
+		<header>
+			<h1>SINGOLO<span>*</span></h1>
+			<nav>
+				<ul>
+					<li><a href="#">HOME</a></li>
+					<li><a href="#">SERVICES</a></li>
+					<li><a href="#">PORTFOLIO</a></li>
+					<li><a href="#">ABOUT</a></li>
+					<li><a href="#">CONTACT</a></li>
+				</ul>
+			</nav>
+		</header>
+		<main>
+			<div class="slider">
+				<div class="slider__buttons">
+					<div class="slider__button slider__button-left"></div>
+					<div class="slider__button slider__button-right"></div>
+				</div>
+				<ul class="slider__slides">
+					<li class="slider__slide">
+						<img src="" />
+						<img src="" />
+					</li>
+				</ul>
+			</div>
+			<section class="services">
+				<div class="article">
+					<h1>Our services</h1>
+					<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum</p>
+				</div>
+				<div class="information-wrapper">
+					<div class="information">
+						<div class="information__icon">
+							<img src="" />
+						</div>
+						<div class="information__content">
+							<h3></h3>
+							<p></p>
+						</div>
+					</div>
+					<div class="information">
+						<div class="information__icon">
+							<img src="" />
+						</div>
+						<div class="information__content">
+							<h3></h3>
+							<p></p>
+						</div>
+					</div>
+					<div class="information">
+						<div class="information__icon">
+							<img src="" />
+						</div>
+						<div class="information__content">
+							<h3></h3>
+							<p></p>
+						</div>
+					</div>
+					<div class="information">
+						<div class="information__icon">
+							<img src="" />
+						</div>
+						<div class="information__content">
+							<h3></h3>
+							<p></p>
+						</div>
+					</div>
+					<div class="information">
+						<div class="information__icon">
+							<img src="" />
+						</div>
+						<div class="information__content">
+							<h3></h3>
+							<p></p>
+						</div>
+					</div>
+					<div class="information">
+						<div class="information__icon">
+							<img src="" />
+						</div>
+						<div class="information__content">
+							<h3></h3>
+							<p></p>
+						</div>
+					</div>
+				</div>
+			</section>
+		</main>
+	</body>
 </html>
